--- a/game.libretro.mgba/resources/language/resource.language.en_gb/strings.po
+++ b/game.libretro.mgba/resources/language/resource.language.en_gb/strings.po
@@ -24,9 +24,7 @@ msgctxt "Addon Description"
 msgid "mGBA aims to be faster and more accurate than many existing Game Boy Advance emulators, as well as adding features that other emulators lack."
 msgstr ""
 
-msgctxt "#30000"
-msgid "Settings"
-msgstr ""
+# Empty string with ID 30000
 
 msgctxt "#30001"
 msgid "Game Boy Model (Restart)"
